--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 android {
     namespace 'com.rezafarahani.climate'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.rezafarahani.climate"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -47,7 +47,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.compose.material3:material3'
+    implementation 'com.google.android.material:material:1.5.0'
+
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
@@ -61,7 +62,9 @@ dependencies {
     def nav_version = "2.5.3"
     implementation composeBom
     androidTestImplementation composeBom
+    implementation 'androidx.compose.material3:material3'
     implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.28.0"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha01"
     implementation "androidx.activity:activity-compose:1.7.0-alpha04"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
@@ -77,6 +80,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+
+    //data store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     //unit testing
     testImplementation 'junit:junit:4.13.2'
