--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
+    testImplementation "io.mockk:mockk:1.13.4"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation  "app.cash.turbine:turbine:0.12.1"
 }
